@@ -74,6 +74,12 @@ Commandline Arguments
 
 Interface "channel"
 -------------------
+- get count of channels
+  vdr-dbus-send.sh /Channels channel.Count
+
+- get channels between from_index and to_index
+  vdr-dbus-send.sh /Channels channel.GetFromTo int32:from_index int32:to_index
+
 - list channels like SVDRP command CHAN
   vdr-dbus-send.sh /Channels channel.List [string:'[ :groups | <number> | <name> | <id> ]']
 
