@@ -220,3 +220,7 @@ VDR Plugin 'dbus2vdr' Revision History
   nearly "rolling releases"
 - started network support
   refactored monitor and dispatcher to work with multiple instances
+
+2013-01-10: Version 2
+- add Count and GetFromTo to channel interface
+- add some Utf8 handling on channel interface
